fix ie11 bug where loading and error messages were not centered correctly

--- a/src/_scss/pages/agency/v2/index.scss
+++ b/src/_scss/pages/agency/v2/index.scss
@@ -193,51 +193,7 @@
             }
             .body__content {
                 @import '../../search/results/table/tableMessages';
-                .results-table-message-container {
-                    position: relative;
-                    background-color: rgb(246, 246, 246);
-                    .results-table-loading {
-                        margin-bottom: rem(100);
-                    }
-                    .no-results-container {
-                        text-align: center;
-                        margin-top: rem(100);
-                        margin-bottom: rem(100);
-                        .no-results-title {
-                            h4 {
-                            margin-bottom: 0;
-                            vertical-align: bottom;
-                            }
-                        }
-                        .no-results-message {
-                            p {
-                            margin-top: 0;
-                            vertical-align: top;
-                            }
-                        }
-                        }
-                        .loading-animation {
-                            @import "../../search/results/screens/loading";
-                        }
-                        .results-table-error {
-                        .icon {
-                            width: rem(36);
-                            height: rem(36);
-                            svg {
-                            width: rem(36);
-                            height: rem(36);
-                            }
-                        }
-                        .title {
-                            font-size: rem(20);
-                        line-height: rem(45);
-                        }
-                        .description {
-                            font-size: rem(16);
-                            line-height: rem(10);
-                        }
-                    }
-                }
+                @import '../../search/results/table/resultsTableMessageContainer';
                 .usda-table {
                     td {
                         &:first-child {
